Fixes vertical alignment of namespace and cloud icon, and fixes double line for buttons in pipeline canvas

--- a/cdap-ui/app/cdap/components/PipelineDetails/PipelineDetailsTopPanel/PipelineDetailsTopPanel.scss
+++ b/cdap-ui/app/cdap/components/PipelineDetails/PipelineDetailsTopPanel/PipelineDetailsTopPanel.scss
@@ -18,7 +18,7 @@
 @import '../../../styles/mixins.scss';
 $pipeline-type-icon-size: 20px;
 $top-panel-height: 55px;
-$btn-border-color: $grey-03;
+$btn-border-color: transparent;
 
 .pipeline-details-top-panel {
   height: $top-panel-height;
