--- a/cdap-ui/app/cdap/components/PipelineDetails/RunLevelInfo/RunLevelInfo.scss
+++ b/cdap-ui/app/cdap/components/PipelineDetails/RunLevelInfo/RunLevelInfo.scss
@@ -50,7 +50,7 @@ $border-color: $grey-05;
     padding-left: 0;
     padding-right: 20px;
     text-align: left;
-    bottom: 2px;
+    bottom: 1px;
 
     h4.run-number {
       font-weight: bold;
